# pamsi_warcaby

./: CMakeLists.txt  Makefile  checkersBoard.cpp  checkersBoard.h  field.cpp  field.h  heuristics_function.cpp  heuristics_function.h  input_to_move_vector.cpp  input_to_move_vector.h  main.cpp  minimax.cpp  minimax.h  moveTree.cpp  moveTree.h  move_vector_to_output.cpp  move_vector_to_output.h  piece_char.cpp  piece_char.h  possible_moves.cpp  possible_moves.h
